static/css/main.css
/**
 * Master styling
 */
body {
    font-family: "Roboto Condensed", Arial, sans-serif;
    background-color: #fff;
    font-size: 18px;
    line-height: 1.5em;
    color: #666;
    font-weight: 300;
}
hr {
    margin-top: 20px;
    margin-bottom: 20px;
    border: 0;
    border-top: 1px solid #F7F1F1;
    border-bottom: 1px solid #fff;
}

/**
 * Font and link declarations
 */
span.time {
    color: #931a59;
    font-size: 11px;
}

span.categories {
    margin-bottom: 5px;
    font-size: 14px;
}

h1 {
    font-weight: normal;
    color: #696969;
    margin-bottom: 10px;
}

h2 {
    font-weight: normal;
    margin-bottom: 5px;
    color: #666666;
    border-bottom: 1px solid #eaecef;
}
        
h3 {
    font-weight: normal;
    margin-bottom: 5px;
    color: #666666;
    border-bottom: 1px solid #eaecef;
}

a, a:link, a:active {
    text-decoration: none;
    color:#1a5993;
}

a:hover {
    color: #59931a;
    text-decoration: underline;
}

/**
 * /////////////////
 * Container element
 * /////////////////
 */
div#container {
    width: 700px;
    margin: auto;
}

/**
 * //////////////////////////////////
 * Right aka content column formatting
 * //////////////////////////////////
 */
div.right {
    width: 500px;
    float: left;
}
           
div.content {
    border-top: 1px solid #E6E6E6;
    margin-top: 5px;
    padding-top: 5px;
}

div.content pre {
    background: #333333;
    padding: 10px;
    color: #FFF;
    overflow-x: auto;
    font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
    font-size: 12px;
    border: none;
}

div.content .highlight {
	background: #333333;
}

footer {
    border-top: 1px solid #F7F1F1;
    width: 100%;
    height: 10px;
    margin-top: 10px;
    margin-bottom: 3em;
    padding-top: 10px;
    color: black;
    font-size: 11px;
    bottom: 0;
    padding-bottom: 10px;
}

footer div#github {
	text-align: right;
}

div.right h1 {
	margin-bottom: -2px;
}

div.right ul {
	list-style: none;
	margin-left: 0;
	padding: 0;
}

div.right ul li {
	margin-top: 5px;
	margin-left: 0;
	padding: 0;
}

div.right .post ul {
	list-style: square;
	margin-left: 15px;
}

/**
 * Left column aka nav bar formatting
 */

.author-name {
    margin: 5px 0px 0px 0px;
    font-size: 26px;
}
 
div.col-sm-2 {
        margin-top: 100px;
        font-size: 11px;
        color: #666;
        display: flex;
        justify-content: space-around;
}

div.col-sm-2 strong {
        font-size: 16px;
        color: #4A4A4A;
        font-weight: normal;
}

div.col-sm-2 div#about {
        margin-top: 0px;
        color: black;
        line-height: 1.6em;
}

div.col-sm-2 img#about {
    -webkit-border-radius: 150px;
    margin-bottom: 0px;
    margin-left: auto;
    margin-right: auto;
}

.PageNavigation {
    font-size: 14px;
    display: block;
    width: auto;
    overflow: hidden;
}

.PageNavigation a {
    display: block;
    width: 50%;
    float: left;
    margin: 1em 0;
}

.PageNavigation .next {
    text-align: right;
}
.PageNavigation .prev {
    text-align: left;
}

.social{
    display: block;
    margin: 10px 0;
}
.social ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
.social ul li {
    display: inline-block;
    margin: 0 5px;
}
.social li a {
    font-size: 16px;
}

.share-page {
    padding: 10px 10px 5px;
    border-top: 1px solid #f0f0f0;
    border-bottom: 1px solid #f0f0f0;
}
.post-content img, .content img {max-width: 100%}

.fixed-condition {
    font-family: Arial, Helvetica, sans-serif;
}

/* Responsive Conditional */
@media (min-width: 1024px) {
    .fixed-condition {
        position: fixed;
        padding-left: 50px;
    }
}
@media (max-width: 768px) {
    div.col-sm-2 {
        margin-top: 30px;
    }
}

/* Utilidades */
.mr-2 {
    margin-right: 2px;
}

.mr-4 {
    margin-right: 4px;
}

.twitter-share-button {
    padding: 2px 10px 0px 10px;
    border-radius: 4px;
    color: white;
    background-color: #00aced;
}

.site-url-container {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.site-url {
    font-size: 15px;
}

.space {
    flex: 1;
}

.post-item {
    display: flex;
    flex-direction: row;
}

.auxiliar-sidebar {
    display: flex;
    justify-content: flex-end !important;
}

.table-of-contents {
    position: fixed;
    margin-top: 100px;
    padding-right: 20px;
}

.table-of-contents__title {
    font-size: 16px;
    font-weight: bold;
}

.table-of-contents__list {
    font-size: 14px;
}

.main {
    display: flex;
    align-items: center;
    justify-content: center;
}

.main-content {
    display: flex;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    max-width: 740px;
}

.main-container {
    display: flex;   
    align-items: flex-start;
    justify-content: space-around;
    flex-wrap: wrap;
}

.navbar-links {
    display: flex;
    flex-wrap: wrap;
}

@media (max-width: 843PX) {
    .info-sidebar {
        display: none !important;
    }

    .auxiliar-sidebar {
        display: none !important;
    }
}


@media (min-width: 843PX) {
    .main-navbar {
        display: none;
    }
}

.post p {
    word-break: break-word;
}

